# capstone-otel-trace

./: README.md  pyproject.toml
autoinstrumentation-trace/: README.md  main.py
images/: otel-auto-trace.drawio  otel-trace.drawio
manual-trace/: computations.py  main.py
