[project]
name = "capstone-otel-trace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-distro>=0.54b1",
    "opentelemetry-exporter-otlp>=1.33.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
]
